@@ -22,12 +22,12 @@ gtk_source_buffer_can_redo
 gtk_source_buffer_can_undo
 gtk_source_buffer_begin_not_undoable_action
 gtk_source_buffer_end_not_undoable_action
-gtk_source_buffer_create_mark
-gtk_source_buffer_get_marks_at_line
-gtk_source_buffer_get_marks_at_iter
-gtk_source_buffer_remove_marks
-gtk_source_buffer_forward_iter_to_mark
-gtk_source_buffer_backward_iter_to_mark
+gtk_source_buffer_create_source_mark
+gtk_source_buffer_get_source_marks_at_line
+gtk_source_buffer_get_source_marks_at_iter
+gtk_source_buffer_remove_source_marks
+gtk_source_buffer_forward_iter_to_source_mark
+gtk_source_buffer_backward_iter_to_source_mark
 gtk_source_buffer_ensure_highlight
 <SUBSECTION Standard>
 GTK_IS_SOURCE_BUFFER
